# thirdparty-uvw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.gradle  config.gradle  publish.gradle  thirdparty-uvw-config.cmake
include/: pragmas.h
